Fix backend compiler warnings, null safety, and frontend refresh modal state